fxing doc
