# src/controllers/activity.ts
@@ -103,6 +103,11 @@ export const deleteItem = async (req, res, next) => {
 };
 
 export const generatePdf = async (req, res, next) => {
+    // #swagger.tags = ['Activities']
+    /*    
+    #swagger.security = [{
+        "apiKeyAuth": []
+    }]*/
 
     try {
         const { query, starDate, endDate } = req.body;
